Bug 562480 - Verbose mode perturbs the system by producing excessive String garbage (r+edwsmith)

Allow StringBuffer to exist in non-managed memory.